[tool.poetry]
name = "satquery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
pydantic = "^1.8.2"
dnspython = "^2.1.0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
