[tool.poetry]
name = "satquery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
pydantic = "^1.8.2"
dnspython = "^2.1.0"
motor = "^2.4.0"
python-dotenv = "^0.17.1"
numpy = "^1.20.3"
boto3 = "^1.17.79"
sat-search = "^0.3.0"
rasterio = "*"
rio-tiler = "*"
mangum = "^0.11.0"
fastapi-users = {extras = ["mongodb"], version = "^6.1.0"}

[tool.poetry.dev-dependencies]
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
