[tool.poetry]
name = "satquery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
pydantic = "^1.8.2"
dnspython = "^2.1.0"
python-dotenv = "^0.17.1"
numpy = "^1.20.3"
boto3 = "^1.17.79"
sat-search = "^0.3.0"
rasterio = "*"
rio-tiler = "*"
pillow = "*"
mangum = "^0.11.0"
fastapi-users = {extras = ["mongodb", "oauth"], version = "^6.1.0"}
aiofiles = "^0.7.0"
pymongo = "*"
motor = "*"
uvicorn = {extras = ["standard"], version ="^0.16.0"}
celery = {extras = ["redis"], version = "^5.2.1"}

[tool.poetry.dev-dependencies]
fastapi = "^0.65.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"